js/js.translator/testData/incremental/invalidation/multiPlatformSimple/lib2/common/l2common.0.kt
expect fun lib2CommonFun(): Int

fun lib2Fun() = lib2CommonFun() + lib1CommonFun() + lib1Fun() + 1
